--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@ pre code {
 <p><strong>Final Exam Attendance Policy:</strong> Not applicable this semester.</p>
 <p><strong>Make-Up Exam Policy:</strong> Not applicable this semester.</p>
 <p><strong>Class Attendance Policy:</strong></p>
-<p>The students are encouraged to attend classes, whereas the attendance is not mandatory in Spring 2021 semester due to Covid-19 pandemic. For that reason, the student is deemed responsible to manage his/her absences.</p>
+<p>The students are encouraged to attend classes, whereas the attendance is not mandatory in Fall 2021 semester due to Covid-19 pandemic. For that reason, the student is deemed responsible to manage his/her absences.</p>
 <p><strong>Participation Policy:</strong></p>
 <p>The students are expected to ask and answer questions, participate in in-class activities, and show their interest and engagement in the class. Asking questions in seminars is encouraged.</p>
 <p><strong>E-mail Policy:</strong></p>
