--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ pre code {
 <p><strong>Computer skills:</strong></p>
 <p>We will be using <code>R</code> programming language with <code>RStudio IDE</code> for data related works. You will be using the version control system <code>Git</code> along with <code>GitHub</code> to submit homework assignments and team-based works. Lastly, prior knowledge of <code>HTML</code>, <code>CSS</code>, and <code>JavaScript</code> brings a big plus to produce fancy outputs for your works. But it is neither a must nor focus of this course.</p>
 <p><strong>Course website:</strong> For each study, you will also receive an invitation soon to submit your study to the GitHub Classroom of the following organization:</p>
-<p><a href="https://github.com/MAT381E" class="uri">https://github.com/MAT381E</a>.</p>
+<p><a href="https://github.com/MAT381E-Fall21" class="uri">https://github.com/MAT381E-Fall21</a>.</p>
 <p><strong>Class Schedule:</strong> Mondays between 14:30-17:30 p.m. (Local time in Istanbul).</p>
 <p><strong>Classroom:</strong> Online via secured ITU Zoom platform.</p>
 <p><strong>Course Logistics:</strong> Each week, before the class, a Zoom meeting invitation will be sent you via your ITU email to join the class on Mondays. Lectures will be automatically recorded and you will have a chance re-watch the videos after the class on <a href="https://ninova.itu.edu.tr" class="uri">https://ninova.itu.edu.tr</a>. Lecture materials (notes, assignments, grades etc) will be uploaded on <a href="https://ninova.itu.edu.tr" class="uri">https://ninova.itu.edu.tr</a>.</p>
@@ -361,14 +361,14 @@ pre code {
 <li><p>If any member for a specific team fails to submit the peer evaluation form, all members of that team will receive “0” for peer evaluation grade.</p></li>
 <li><p>Peer evaluation and statement of personal contribution forms will be available on Ninova.</p></li>
 <li><p><strong>For detailed information on project design guideline, please see the relevant document on Ninova.</strong></p></li>
-<li><p><strong>Every study mentioned above should be submitted by each student via Ninova and GitHub Classroom of MAT381E organization.</strong></p></li>
+<li><p><strong>Every study mentioned above should be submitted by each student via Ninova and GitHub Classroom of MAT381E-Fall21 organization.</strong></p></li>
 <li><p>Exact submission dates for each study above will be announced at well in advance.</p></li>
 </ul>
 <p><strong>Late Submission Policy:</strong> Students are expected to do homework assignments by themselves. Neither homework assignments nor team-based works will be accepted after deadline. There are <strong>NO</strong> make-ups for missed homework and team-based works. The students who have Covid-19 medical report during the submission periods can ask for extension only.</p>
-<p><strong>Final Exam Attendance Policy:</strong> Not applicable this semester.</p>
+<p><strong>Final Exam Attendance Policy:</strong> At least 30 points from in-semester studies.</p>
 <p><strong>Make-Up Exam Policy:</strong> Not applicable this semester.</p>
 <p><strong>Class Attendance Policy:</strong></p>
-<p>The students are encouraged to attend classes, whereas the attendance is not mandatory in Fall 2021 semester due to Covid-19 pandemic. For that reason, the student is deemed responsible to manage his/her absences.</p>
+<p>The students must attend at least 70% of classes and is deemed responsible to manage his/her absences.</p>
 <p><strong>Participation Policy:</strong></p>
 <p>The students are expected to ask and answer questions, participate in in-class activities, and show their interest and engagement in the class.</p>
 <p><strong>E-mail Policy:</strong></p>
