--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@ pre code {
 <p>If you are a student with special needs, let me know that how we can adjust the course environment and materials in accordance with your needs. Furthermore, you are also invited to contact the office of students with special needs at:</p>
 <p><a href="http://engelsiz.itu.edu.tr/" class="uri">http://engelsiz.itu.edu.tr/</a>.</p>
 <p><strong>ITU Distance Education Policy:</strong></p>
-<p>Sharing the lecture recordings or its piece with third parties is  forbidden. Furthermore, the recordings are subject to investigation by the authorities as needed. For that reason, be sure that you behave () responsibly in this virtual class. Please visit:</p>
+<p>Sharing the lecture recordings or its piece with third parties is strictly forbidden. Furthermore, the recordings are subject to investigation by the authorities as needed. For that reason, be sure that you behave (both orally and verbally) responsibly in this virtual class. Please visit:</p>
 <p><a href="https://online.itu.edu.tr/" class="uri">https://online.itu.edu.tr/</a>,</p>
 <p>for more information on distance education regulations at ITU.</p>
 </div>
