--- a/MAT381E_Syllabus.html
+++ b/MAT381E_Syllabus.html
@@ -354,15 +354,14 @@ pre code {
 <li>Statement of personal contribution.</li>
 </ul></li>
 </ul></li>
+<li><p>Exact submission dates for each study above will be announced at well in advance.</p></li>
 <li><p>Homework assignments are individual-based studies, whereas team-based project is the product of team.</p></li>
 <li><p>All members of a team will get the same point on <strong>the project proposal, interim report, final report, report posted on GitHub pages, and oral presentation</strong>. However, I reserve the right to assign different grades to each team member based on peer evaluations (see below).</p></li>
 <li><p>Each team member should contribute to oral presentation where the allocated time is evenly distributed among the team members. If any member of the team fails to do oral presentation, that individual will receive “0” for oral presentation grade.</p></li>
 <li><p>The peer evaluation point of a student will be the average of the points which his/her team members will assign to him/her.</p></li>
 <li><p>If any member for a specific team fails to submit the peer evaluation form, all members of that team will receive “0” for peer evaluation grade.</p></li>
-<li><p>Peer evaluation and statement of personal contribution forms will be available on Ninova.</p></li>
-<li><p><strong>For detailed information on project design guideline, please see the relevant document on Ninova.</strong></p></li>
-<li><p><strong>Every study mentioned above should be submitted by each student via Ninova and GitHub Classroom of MAT381E-Fall21 organization.</strong></p></li>
-<li><p>Exact submission dates for each study above will be announced at well in advance.</p></li>
+<li><p><strong>For detailed information on project design guideline and related documents, please see the relevant document on Ninova.</strong></p></li>
+<li><p><strong>Every study mentioned above should be submitted by each student via GitHub Classroom of MAT381E-Fall21 organization.</strong></p></li>
 </ul>
 <p><strong>Late Submission Policy:</strong> Students are expected to do homework assignments by themselves. Neither homework assignments nor team-based works will be accepted after deadline. There are <strong>NO</strong> make-ups for missed homework and team-based works. The students who have Covid-19 medical report during the submission periods can ask for extension only.</p>
 <p><strong>Final Exam Attendance Policy:</strong> At least 30 points from in-semester studies.</p>
