--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@ pre code {
 <li><p><strong>Every study mentioned above should be submitted by each student via GitHub Classroom of MAT381E-Fall21 organization.</strong></p></li>
 </ul>
 <p><strong>Late Submission Policy:</strong> Students are expected to do homework assignments by themselves. Neither homework assignments nor team-based works will be accepted after deadline. There are <strong>NO</strong> make-ups for missed homework and team-based works. The students who have Covid-19 medical report during the submission periods can ask for extension only.</p>
-<p><strong>Final Exam Attendance Policy:</strong> At least 30 points from in-semester studies.</p>
+<p><strong>Final Exam Attendance Policy:</strong> None.</p>
 <p><strong>Make-Up Exam Policy:</strong> Not applicable this semester.</p>
 <p><strong>Class Attendance Policy:</strong></p>
 <p>The students must attend at least 70% of classes and is deemed responsible to manage his/her absences.</p>
