--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ pre code {
 <p><strong>Final Exam Attendance Policy:</strong> None.</p>
 <p><strong>Make-Up Exam Policy:</strong> Not applicable this semester.</p>
 <p><strong>Class Attendance Policy:</strong></p>
-<p>The students must attend at least 70% of classes and is deemed responsible to manage his/her absences.</p>
+<p>The students must attend at least 70% of classes and are deemed responsible to manage his/her absences.</p>
 <p><strong>Participation Policy:</strong></p>
 <p>The students are expected to ask and answer questions, participate in in-class activities, and show their interest and engagement in the class.</p>
 <p><strong>E-mail Policy:</strong></p>
