--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@ pre code {
 <li>Project interim written-report 20%,</li>
 <li>Project final written-report 20%,</li>
 <li>Project website on GitHub pages 5%,</li>
-<li>Project oral presentation 20%,</li>
+<li>Project final oral presentation 20%,</li>
 <li>Peer evaluation 5%,</li>
 <li>Statement of personal contribution.</li>
 </ul></li>
