--- a/index.html
+++ b/index.html
@@ -203,97 +203,115 @@ pre code {
 <p><strong>Course Tentative Plan</strong>: We will closely follow the weekly schedule given below. However, weekly class schedules are subject to change depending on the progress we make as a class.</p>
 <table>
 <colgroup>
-<col width="22%" />
-<col width="22%" />
-<col width="54%" />
+<col width="13%" />
+<col width="13%" />
+<col width="51%" />
+<col width="21%" />
 </colgroup>
 <thead>
 <tr class="header">
 <th align="center"><strong>Week</strong></th>
 <th align="center"><strong>Date</strong></th>
 <th align="left"><strong>Topic</strong></th>
+<th align="center"><strong>Github Repo</strong></th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
 <td align="center">1</td>
 <td align="center">04/10</td>
-<td align="left">Introduction to data science and computational tools.</td>
+<td align="left">Introduction to data science and computational tools. <strong>(Project proposal assigned)</strong></td>
+<td align="center"><a href="https://github.com/MAT381E-Fall21/Week_1_Lecture_Notes">🔗</a></td>
 </tr>
 <tr class="even">
 <td align="center">2</td>
 <td align="center">11/10</td>
 <td align="left">Tools for data importing, manipulating, and tidying.</td>
+<td align="center"><a href="https://github.com/MAT381E-Fall21/Week_2_Lecture_Notes">🔗</a></td>
 </tr>
 <tr class="odd">
 <td align="center">3</td>
 <td align="center">18/10</td>
 <td align="left">Basic principles of data visualization.</td>
+<td align="center"></td>
 </tr>
 <tr class="even">
 <td align="center">4</td>
 <td align="center">25/10</td>
 <td align="left">Data visualization tools.</td>
+<td align="center"></td>
 </tr>
 <tr class="odd">
 <td align="center">5</td>
 <td align="center">01/11</td>
 <td align="left">Handling with strings and dates in data. <strong>(HW1 assigned, Project proposal submission)</strong></td>
+<td align="center"></td>
 </tr>
 <tr class="even">
 <td align="center">6</td>
 <td align="center">08/11</td>
 <td align="left">Scraping data from web.</td>
+<td align="center"></td>
 </tr>
 <tr class="odd">
 <td align="center">7</td>
 <td align="center">15/11</td>
 <td align="left">Data extraction from social networking sites.</td>
+<td align="center"></td>
 </tr>
 <tr class="even">
 <td align="center">8</td>
 <td align="center">22/11</td>
 <td align="left">ITU Fall Break.</td>
+<td align="center"></td>
 </tr>
 <tr class="odd">
 <td align="center">9</td>
 <td align="center">29/11</td>
 <td align="left">Basic principles of text mining. <strong>(Project interim report submission)</strong></td>
+<td align="center"></td>
 </tr>
 <tr class="even">
 <td align="center">10</td>
 <td align="center">06/12</td>
 <td align="left">Network analysis and visualization.</td>
+<td align="center"></td>
 </tr>
 <tr class="odd">
 <td align="center">11</td>
 <td align="center">13/12</td>
 <td align="left">Basic principles of geographic information system.</td>
+<td align="center"></td>
 </tr>
 <tr class="even">
 <td align="center">12</td>
 <td align="center">20/12</td>
 <td align="left">Visualization of spatial and urban data. <strong>(HW2 assigned)</strong></td>
+<td align="center"></td>
 </tr>
 <tr class="odd">
 <td align="center">13</td>
 <td align="center">27/12</td>
 <td align="left">Basic principles of interactive data visualization.</td>
+<td align="center"></td>
 </tr>
 <tr class="even">
 <td align="center">14</td>
 <td align="center">03/01</td>
 <td align="left">Interactive web-based data visualization tools.</td>
+<td align="center"></td>
 </tr>
 <tr class="odd">
 <td align="center">15</td>
 <td align="center">10/01</td>
 <td align="left">Relational databases.</td>
+<td align="center"></td>
 </tr>
 <tr class="even">
 <td align="center">16-17</td>
 <td align="center">17-30/01</td>
 <td align="left">Final exam week. <strong>(Final report submission, Project website on GitHub pages, Oral presentation)</strong></td>
+<td align="center"></td>
 </tr>
 </tbody>
 </table>
